# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .fehbg  .gitconfig  .gitignore  .tmux.conf  .vimrc  .zshenv  .zshrc  aqua.yaml  deploy.ln  deploy.sh  deploy.ts  dot_gitconfig  dot_p10k.zsh  dot_p10k.zsh.tmpl  dot_stalonetrayrc  dot_tmux.conf  dot_tool-versions  dot_vimrc  dot_zprofile  dot_zshenv  dot_zshenv.tmpl  dot_zshrc  dot_zshrc.local.tmpl  executable_dot_fehbg  executable_install.sh  renovate.json  run_aqua_install.sh  run_mise_install.sh  run_rtx_install.sh
.config/: starship.toml  topgrade.toml
.config/alacritty/: alacritty.yml
.config/aqua/: aqua.yaml
.config/bat/: config
.config/dunst/: dunstrc
.config/efm-langserver/: config.yaml
.config/fontconfig/: fonts.conf
.config/gh/: config.yml
.emacs.d/: init.el
.tmux/: tmuxline-github.conf  tmuxline-nightfly.conf  tmuxline-tokyonight.conf
.xmonad/: .gitignore  changeBrightness  changeVolume  mono.sh  pentablet  playerctl_status  pulse-config.sh  stack.yaml  toggleMicMute  xmobarrc  xmonad.hs
.zsh/: tmuxpopup.zsh
deploy/: aqua.ts  dotfiles.ts
dot_emacs.d/: init.el
dot_hammerspoon/: alacritty.lua  alacritty_hammerspoon.lua  init.lua
dot_ncmpcpp/: bindings
dot_rye/: config.toml
dot_stack/: private_config.yaml
dot_tmux/: tmuxline-nightfly.conf
dot_xmonad/: executable_build  executable_getPulseVolume  executable_maimFull  executable_maimSelect  hie.yaml  stack.yaml  xmonad-config.cabal  xmonad.hs
dot_xmonad/XmonadConfig/: Keys.hs  Layouts.hs  Types.hs  Workspace.hs
(+308 files in other folders)
