name:                xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/xmonad-config#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable xmonad-config
  hs-source-dirs:      .
  main-is:             xmonad.hs
  default-language:    Haskell2010
  other-modules:       XmonadConfig.Types
                     , XmonadConfig.Workspace
                     , XmonadConfig.Layouts
                     , XmonadConfig.Keys
  build-depends:       base >= 4.7 && < 5
                     , xmonad
                     , xmonad-contrib
                     , containers >= 0.5.7 && < 0.6
                     , unix
                     , directory
